함수 기반 뷰(FBV)의 4가지 패턴

--- a/askdjango/dojo/templates/dojo/post_list.html
+++ b/askdjango/dojo/templates/dojo/post_list.html
@@ -15,8 +15,8 @@ user-scalable=no" />
 </p>
 
 <ul>
-<li>http://localhost:8000/blog/주소로 접속해보세요.</li>
-<li>템플릿 경로는 blog/templates/post_list.html</li>
+<li>제 이름은 {{name}}  입니다.</li>
+<li>템플릿 경로는 dojo/templates/dojo/post_list.html</li>
 </ul>
 </body>
 </html>
